force-app/main/default/objects/ArdiraSurvey__Question__c/ArdiraSurvey__Question__c.object-meta.xml
<CustomObject>
    <description>The object stores the information about a question and its answer choices.</description>
    <label>Ardira Question</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>