force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Additional_Categories__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Additional_Categories__c</fullName>
    <description>Comma separated list of category names.</description>
    <inlineHelpText>Comma separated list of category names.</inlineHelpText>
    <label>Additional Categories</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>