force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Additional_Categories_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Additional_Categories_JSON__c</fullName>
    <description>Select one or more categories to associate as additional categories.</description>
    <inlineHelpText>Select one or more categories to associate as additional categories.</inlineHelpText>
    <label>Additional Categories JSON</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>