force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Additional_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Additional_Configuration__c</fullName>
    <description>Additional configuration in JSON format. For example, the configuration of Appointment Question, Currency Question, Payment Integration Question and Full Name Question.</description>
    <inlineHelpText>Additional configuration in JSON format.</inlineHelpText>
    <label>Additional Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>