force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Allow_Attachment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, users will be allowed to upload files when responding to a question.</description>
    <inlineHelpText>Enable to allow uploading of files in response to the question.</inlineHelpText>
    <label>Allow Attachment</label>
    <type>Checkbox</type>
</CustomField>