force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Allow_Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, users will be allowed to add comment when responding to a question.</description>
    <inlineHelpText>Enable to allow adding comment when responding to the question.</inlineHelpText>
    <label>Allow Comment</label>
    <type>Checkbox</type>
</CustomField>