force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Allow_Only_Specified_File_Types__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_Only_Specified_File_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow only specified file types.</description>
    <inlineHelpText>Allow only specified file types.</inlineHelpText>
    <label>Allow Only Specified File Types</label>
    <type>Checkbox</type>
</CustomField>