force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Allowed_File_Types__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allowed_File_Types__c</fullName>
    <description>Limit the file types that can be uploaded to the survey solution. Enter file extensions separated with a comma for example  (jpg,doc,txt). To allow all file types, leave this field empty.</description>
    <inlineHelpText>Limit the file types that can be uploaded to the survey solution. Enter file extensions separated with a comma for example  (jpg,doc,txt). To allow all file types, leave this field empty.</inlineHelpText>
    <label>Allowed File Types</label>
    <type>TextArea</type>
</CustomField>