force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Attachment_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Attachment_Label__c</fullName>
    <description>Label to use for attachment area.</description>
    <inlineHelpText>Label to display for attachment upload area.</inlineHelpText>
    <label>Attachment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>