force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Auto_Expand_Children_on_Parent_Selection__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Auto_Expand_Children_on_Parent_Selection__c</fullName>
    <description>Auto Expand Children on Parent Selection</description>
    <inlineHelpText>Select an option to auto expand child nodes on parent node selection.</inlineHelpText>
    <label>Auto Expand Children on Parent Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>