force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__AutoSubmit_When_Question_Display__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__AutoSubmit_When_Question_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, when this question is rendered in the survey responder interface, system will automatically submit the survey.</description>
    <inlineHelpText>When enabled, when this question is rendered in the survey responder interface, system will automatically submit the survey.</inlineHelpText>
    <label>Auto Submit on this Question Display</label>
    <type>Checkbox</type>
</CustomField>