force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Border_for_Answer_Choices__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Border_for_Answer_Choices__c</fullName>
    <defaultValue>&quot;Dark&quot;</defaultValue>
    <description>Set border for answer choices.</description>
    <inlineHelpText>Set border for answer choices.</inlineHelpText>
    <label>Border for Answer Choices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
                <default>true</default>
                <label>Dark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>