force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Alignment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Alignment__c</fullName>
    <defaultValue>&quot;Left&quot;</defaultValue>
    <description>Alignment of all the elements of a question.</description>
    <inlineHelpText>Select an alignment for all elements of the question.</inlineHelpText>
    <label>Alignment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
                <default>true</default>
                <label>Left</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>