force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Answer_Keyword__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Answer_Keyword__c</fullName>
    <description>Keyword or a phrase to determine the correctness of a question answer</description>
    <inlineHelpText>Set of keywords to use to determine a response is the correct answer or not.</inlineHelpText>
    <label>Answer Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>