force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Correct_Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Correct_Answer_Score__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Score to be assigned when the response is correct</description>
    <inlineHelpText>Score to set for the question when a response is a correct answer.</inlineHelpText>
    <label>Correct Answer Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>