force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Date_Correct_Answer_When__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Date_Correct_Answer_When__c</fullName>
    <defaultValue>&quot;Answered&quot;</defaultValue>
    <description>Rule to determine a correct answer</description>
    <inlineHelpText>Specify when a response to the question can be marked as the correct response.</inlineHelpText>
    <label>Correct Answer When Date</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
                <default>true</default>
                <label>Answered</label>
            </value>
            <value>
                <fullName>Not Answered</fullName>
                <isActive>false</isActive>
                <label>Not Answered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>