force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Date_Default_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Date_Default_Current_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, use today&apos;s date as the default response to this question.</description>
    <inlineHelpText>Enable to use today&apos;s date as the default response to the question.</inlineHelpText>
    <label>Default Current Date</label>
    <type>Checkbox</type>
</CustomField>