force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Date_Time_24_Hour_Format__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Date_Time_24_Hour_Format__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, indicates date and date time values are to be displayed in 24 hour format.</description>
    <inlineHelpText>Enable to display time value in 24 hour format.</inlineHelpText>
    <label>Date Time Question - 24 Hour Format</label>
    <type>Checkbox</type>
</CustomField>