force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Display_Image_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Display_Image_Size__c</fullName>
    <defaultValue>&quot;Small&quot;</defaultValue>
    <description>Answer Choice Image Size.</description>
    <inlineHelpText>Select image size to display.</inlineHelpText>
    <label>Display Image Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
                <default>true</default>
                <label>Small</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>