force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Grid_Alternate_Row_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Grid_Alternate_Row_Color__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, alternate rows of the grid are rendered with a different background color.</description>
    <inlineHelpText>Enable to apply alternate background colors to sub-question rows in a grid question.</inlineHelpText>
    <label>Grid Question - Alternate Row Color</label>
    <type>Checkbox</type>
</CustomField>