force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Grid_Random_Row_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Grid_Random_Row_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, rows in the grid are randomly ordered.</description>
    <inlineHelpText>Enable to display grid sub-question rows in a random order.</inlineHelpText>
    <label>Grid Question - Random Row Order</label>
    <type>Checkbox</type>
</CustomField>