force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Help_Text_Display__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Help_Text_Display__c</fullName>
    <defaultValue>&quot;As Tooltip&quot;</defaultValue>
    <description>Location of tooltip with respect to the question.</description>
    <inlineHelpText>Select display location for the question help text in the survey response interface.</inlineHelpText>
    <label>Help Text Display Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above Question Text</fullName>
            </value>
            <value>
                <fullName>Below Question Text</fullName>
            </value>
            <value>
                <fullName>As Tooltip</fullName>
                <default>true</default>
                <label>As Tooltip</label>
            </value>
            <value>
                <fullName>Below Answer Element</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>