force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Hide_Question_Text_from_Responder__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Hide_Question_Text_from_Responder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to hide the question text from a participant in the survey response interface.</description>
    <inlineHelpText>Enable to hide the question text from a participant in the survey response interface.</inlineHelpText>
    <label>Hide Question Text from Responder</label>
    <type>Checkbox</type>
</CustomField>