force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Display__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Display__c</fullName>
    <defaultValue>&quot;Checkbox&quot;</defaultValue>
    <description>Way to display multiple choices.</description>
    <inlineHelpText>Select how you would like to display multiple choices in the survey response interface.
The radio button format allows user to select only single choice.</inlineHelpText>
    <label>Multiple Choice - Display Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Checkbox - 2 Columns</fullName>
            </value>
            <value>
                <fullName>Checkbox - 3 Columns</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Radio - 2 Columns</fullName>
            </value>
            <value>
                <fullName>Radio - 3 Columns</fullName>
            </value>
            <value>
                <fullName>Hierarchy Tree</fullName>
            </value>
            <value>
                <fullName>Typeahead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>