force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Display_Image__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Display_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, display images with answer choices.</description>
    <inlineHelpText>Enable to display an image with an answer choice.</inlineHelpText>
    <label>Multiple Choice - Display Image</label>
    <type>Checkbox</type>
</CustomField>