force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Display_Image_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Display_Image_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, display labels for multiple choice images.</description>
    <inlineHelpText>Enable to display labels along with images.</inlineHelpText>
    <label>Multiple Choice - Display Image Label</label>
    <type>Checkbox</type>
</CustomField>