force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Image_Custom_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Image_Custom_Size__c</fullName>
    <description>Custom width x heigt of the images displayed for multiple choice questions.</description>
    <inlineHelpText>Custom display width x heigt of an answer choice image.</inlineHelpText>
    <label>Multiple Choice - Image Custom Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>