force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Image_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Image_Size__c</fullName>
    <description>Size of he image displayed for multi choice questions.</description>
    <inlineHelpText>Choose image size for the answer choices.</inlineHelpText>
    <label>Multiple Choice - Image Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>