force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Randomize_Choices__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Randomize_Choices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, randomize the order in which the choices are displayed.</description>
    <inlineHelpText>Enable to display answer choices in a random order.</inlineHelpText>
    <label>Multiple Choice - Randomize Choices</label>
    <type>Checkbox</type>
</CustomField>