force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Multiple_Choice_Scoring_option__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Multiple_Choice_Scoring_option__c</fullName>
    <defaultValue>&quot;Use Choice Score&quot;</defaultValue>
    <description>If &quot;Use Correct Answer Score&quot; is selected, the question gets “Correct Answer Score”. If &quot;Use Choice Score&quot; is selected, use score associated with the selected answer choices.</description>
    <inlineHelpText>Use Correct Answer Score - Uses the correct answer score when the question response is correct based on correct choices; 
Use Choice Score - Uses the scores configured for the selected response choices</inlineHelpText>
    <label>Multiple Choice - Scoring option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Correct Answers</fullName>
                <label>Use Correct Answer Score</label>
            </value>
            <value>
                <fullName>Use Choice Score</fullName>
                <default>true</default>
                <label>Use Choice Score</label>
            </value>
            <value>
                <fullName>Use Correct Answer</fullName>
                <isActive>false</isActive>
                <label>Use Correct Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>