force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Number_Correct_Answer_When__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Number_Correct_Answer_When__c</fullName>
    <defaultValue>&quot;Answered&quot;</defaultValue>
    <description>Rule to determine a correct answer</description>
    <inlineHelpText>Specify when a response to the question can be marked as the correct response.</inlineHelpText>
    <label>Number Question - Correct Answer When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
                <default>true</default>
                <label>Answered</label>
            </value>
            <value>
                <fullName>Answer Equals To</fullName>
            </value>
            <value>
                <fullName>Answer Not Equals To</fullName>
            </value>
            <value>
                <fullName>Answer Less Than</fullName>
            </value>
            <value>
                <fullName>Answer Less Or Equal To</fullName>
            </value>
            <value>
                <fullName>Answer Greater Than</fullName>
            </value>
            <value>
                <fullName>Answer Greater Or Equal To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>