force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Password_Mode__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Password_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to mask the characters a participant enters, just like when entering a password.</description>
    <inlineHelpText>Enable to mask the characters a participant enters, just like when entering a password.</inlineHelpText>
    <label>Password Mode</label>
    <type>Checkbox</type>
</CustomField>