force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Polar_Yes_No_Display__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Polar_Yes_No_Display__c</fullName>
    <defaultValue>&quot;YesNo&quot;</defaultValue>
    <description>Display options for Yes/No type of question.</description>
    <inlineHelpText>Select how you would like to display yes-no choices in the survey response interface.</inlineHelpText>
    <label>Yes-No Question - Display</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>YesNo</fullName>
                <default>true</default>
                <label>Yes-No</label>
            </value>
            <value>
                <fullName>TrueFalse</fullName>
                <label>True-False</label>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>LikeDislike</fullName>
                <label>Like-Dislike</label>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>