force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Polar_Yes_No_Reverse_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Polar_Yes_No_Reverse_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, display No/Yes instead of Yes/No.</description>
    <inlineHelpText>Enable to display No/Yes instead of Yes/No choices order.</inlineHelpText>
    <label>Yes-No Question - Reverse Order</label>
    <type>Checkbox</type>
</CustomField>