force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Radio_Display__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Radio_Display__c</fullName>
    <defaultValue>&quot;Vertical Radio&quot;</defaultValue>
    <description>Way to display single select choices.</description>
    <inlineHelpText>Select display option for radio choices in the survey response interface.</inlineHelpText>
    <label>Radio - Display Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vertical Radio</fullName>
                <default>true</default>
                <label>Vertical Radio</label>
            </value>
            <value>
                <fullName>Vertical Radio - 2 Columns</fullName>
            </value>
            <value>
                <fullName>Vertical Radio - 3 Columns</fullName>
            </value>
            <value>
                <fullName>Horizontal Radio</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
            <value>
                <fullName>Typeahead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>