force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Ranking_Correct_Answer_When__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Ranking_Correct_Answer_When__c</fullName>
    <defaultValue>&quot;Correct Order&quot;</defaultValue>
    <description>Rule to determine a correct answer</description>
    <inlineHelpText>Specify when a response to the question can be marked as the correct response.</inlineHelpText>
    <label>Ranking Question - Correct Answer When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct Order</fullName>
                <default>true</default>
                <label>Correct Order</label>
            </value>
            <value>
                <fullName>Incorrect Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>