force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Rating_Left_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Rating_Left_Label__c</fullName>
    <description>Label for the first (left) value of the question answer choice.</description>
    <inlineHelpText>Label for the first (left) value of the question answer choice.</inlineHelpText>
    <label>Left Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>