force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Rating_Shape__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Rating_Shape__c</fullName>
    <defaultValue>&quot;Star&quot;</defaultValue>
    <description>Shape to use for displaying rating ranges.</description>
    <inlineHelpText>Select a shape to use for the ratings in the survey response interface.</inlineHelpText>
    <label>Rating Question - Shape</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star</fullName>
            </value>
            <value>
                <fullName>Heart</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>