force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Show_Image_Caption__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Show_Image_Caption__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable to display image caption.</description>
    <inlineHelpText>Enable to display image caption.</inlineHelpText>
    <label>Show Image Caption</label>
    <type>Checkbox</type>
</CustomField>