force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Text_Correct_Answer_When__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Text_Correct_Answer_When__c</fullName>
    <defaultValue>&quot;Answered&quot;</defaultValue>
    <description>Rule to determine a correct answer</description>
    <inlineHelpText>Specify when a response to the question can be marked as the correct response.</inlineHelpText>
    <label>Text Question - Correct Answer When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
                <default>true</default>
                <label>Answered</label>
            </value>
            <value>
                <fullName>Answer Contains Answer Keyword</fullName>
                <label>Answer Contains Keyword</label>
            </value>
            <value>
                <fullName>Answer Does Not Contain Answer Keyword</fullName>
                <label>Answer Does Not Contain Keyword</label>
            </value>
            <value>
                <fullName>Sentiment Contains Keyword</fullName>
            </value>
            <value>
                <fullName>Sentiment Does Not Contain Keyword</fullName>
            </value>
            <value>
                <fullName>Not Answered</fullName>
                <isActive>false</isActive>
                <label>Not Answered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>