force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__C_Text_Number_Of_Visible_Rows__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Text_Number_Of_Visible_Rows__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Number of rows of response text to be displayed.</description>
    <inlineHelpText>Enter the number of rows to be visible in the question response text area.</inlineHelpText>
    <label>Text Question - Number Of Visible Rows</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>