force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Category__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Question belongs to this category.</description>
    <inlineHelpText>Question category.</inlineHelpText>
    <label>Category</label>
    <referenceTo>ArdiraSurvey__Category__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>