force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Center_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Center_Label__c</fullName>
    <description>Label for the center value of the question answer choice.</description>
    <inlineHelpText>Label for the center value of the question answer choice.</inlineHelpText>
    <label>Center Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>