force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Comment_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Comment_Label__c</fullName>
    <description>Label to use for comment area.</description>
    <inlineHelpText>Label to use for the comment area.</inlineHelpText>
    <label>Comment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>